--- a/app/views/legs/_form.html.erb
+++ b/app/views/legs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@leg), :remote=>true do |f| %>
+<%= form_for @leg do |f| %>
   <% if @leg.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@leg.errors.count, "error") %> prohibited this leg from being saved:</h2>
@@ -9,8 +9,7 @@
       <% end %>
       </ul>
     </div>
-  <% end %>
-
+<% end %>
   <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location %>
