pushing to origin

--- a/app/views/legs/index.html.erb
+++ b/app/views/legs/index.html.erb
@@ -8,17 +8,7 @@
     <th>Details</th>
   </tr>
 
-<% @legs.each do |leg| %>
-  <tr>
-    <td><%= leg.location %></td>
-    <td><%= leg.depart_arrive_type %></td>
-    <td><%= leg.depart_arrive%></td>
-    <td><%= leg.details %></td>
-    <td><%= link_to 'Show', leg %></td>
-    <td><%= link_to 'Edit', edit_leg_path(leg) %></td>
-    <td><%= link_to 'Destroy', leg, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
+<%= render @legs%>
 </table>
 
 <br />
