--- a/app/views/legs/show.html.erb
+++ b/app/views/legs/show.html.erb
@@ -2,7 +2,13 @@
 
 <p>
   <b>Location:</b>
-  <%= @leg.location %>
+  <%= @leg.location %><br /><br />
+  <b>Departure/Arrival:</b>
+  <%= @leg.depart_arrive_type %><br /><br />
+  <b>Departure/Arrival time:</b>
+  <%= @leg.depart_arrive %><br /><br />
+  <b>Details:</b>
+  <%= @leg.details %>
 </p>
 
 
