Adding some basic css styling to the legs index action.  Added Coffeescript as well to manipulate styles

--- a/app/assets/stylesheets/legs.css.scss
+++ b/app/assets/stylesheets/legs.css.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+table {
+	background-color:#87CEEB;
+	font-size:1.5em;
+	font-family:Sans-serif;
+}
+table, th, td {
+        border: 2px solid white;	
+}
 .active {
-	background-color: #FF0080;
+	background-color:#FFFFFF;
+	font-weight:bold;
 }
