--- a/app/assets/stylesheets/legs.css.scss
+++ b/app/assets/stylesheets/legs.css.scss
@@ -1,14 +1,15 @@
-// Place all the styles related to the legs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 table {
 	background-color:#87CEEB;
 	font-size:1.5em;
 	font-family:Sans-serif;
+	empty-cells:hide;
 }
 table, th, td {
-        border: 2px solid white;	
+        border: 2px solid white;
+        empty-cells:hide;	
+}
+td {
+	padding:25px;
 }
 .active {
 	background-color:#FFFFFF;
