replaced models with scaffold trip

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@trip) do |f| %>
   <% if @trip.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@leg.errors.count, "error") %> prohibited this leg from being saved:</h2>
+      <h2><%= pluralize(@trip.errors.count, "error") %> prohibited this trip from being saved:</h2>
 
       <ul>
-      <% @leg.errors.full_messages.each do |msg| %>
+      <% @trip.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -12,24 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, :size=>30 %>
+    <%= f.label :string %><br />
+    <%= f.text_field :string %>
   </div>
-  <%= f.fields_for :legs do |l| %>
   <div class="field">
-    <%= l.label :location %><br />
-    <%= l.text_field :location %>
-   </div>
-    <div class="field"> 
-    <%= l.label :depart_arrive_type %><br />
-    <%= l.select :depart_arrive_type, ["Departure", "Arrival"] %>
-    
-   </div>
-   <div class="field"> 
-    <%= l.label :depart_arrive %><br />
-    <%= l.datetime_select :depart_arrive %>
+    <%= f.label :string %><br />
+    <%= f.text_field :string %>
   </div>
-  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
