--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Trip#edit</h1>
-<p>Find me in app/views/trip/edit.html.erb</p>
+<h1>Editing trip</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @trip %> |
+<%= link_to 'Back', trips_path %>
