--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,2 +1,25 @@
-<h1>All Trips</h1>
-<p>Find me in app/views/trip/index.html.erb</p>
+<h1>Listing trips</h1>
+
+<table>
+  <tr>
+    <th>String</th>
+    <th>String</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+<% @trips.each do |trip| %>
+  <tr>
+    <td><%= trip.string %></td>
+    <td><%= trip.string %></td>
+    <td><%= link_to 'Show', trip %></td>
+    <td><%= link_to 'Edit', edit_trip_path(trip) %></td>
+    <td><%= link_to 'Destroy', trip, confirm: 'Are you sure?', method: :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New Trip', new_trip_path %>
