--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>String:</b>
-  <%= @trip.string %>
+  <b>Name:</b>
+  <%= @trip.name %>
 </p>
 
 <p>
-  <b>String:</b>
-  <%= @trip.string %>
+  <b>Email:</b>
+  <%= @trip.email %>
 </p>
 
 
